force-app/main/default/objects/Unit_Details__c/Unit_Details__c.object-meta.xml
<CustomObject>
    <label>Unit Details</label>
    <nameField>
        <displayFormat>UD-{0000}</displayFormat>
        <label>Unit Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>