force-app/main/default/objects/Unit_Details__c/fields/CDR__c.field-meta.xml
<CustomField>
    <fullName>CDR__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CDR #</label>
    <referenceTo>Camp_Daily_Report__c</referenceTo>
    <relationshipLabel>Unit Details</relationshipLabel>
    <relationshipName>Unit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>