force-app/main/default/objects/Unit_Details__c/fields/Collection_Services__c.field-meta.xml
<CustomField>
    <fullName>Collection_Services__c</fullName>
    <label>Collection Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waste Removal (Bin)</fullName>
            </value>
            <value>
                <fullName>Waste Removal (Septic/Grey Water)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>