force-app/main/default/objects/Unit_Details__c/fields/Coolant_Check_2__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Check_2__c</fullName>
    <label>Coolant Check (2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satisfactory Level</fullName>
                <default>true</default>
                <label>Satisfactory Level</label>
            </value>
            <value>
                <fullName>Coolant Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>