force-app/main/default/objects/Unit_Details__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DR#</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>Unit Details (DR#)</relationshipLabel>
    <relationshipName>Unit_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>