force-app/main/default/objects/Unit_Details__c/fields/Details_of_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Deliveries__c</fullName>
    <label>Details of Deliveries</label>
    <type>TextArea</type>
</CustomField>