force-app/main/default/objects/Unit_Details__c/fields/Details_of_Waste_Collection__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Waste_Collection__c</fullName>
    <label>Details of Waste Collection</label>
    <type>TextArea</type>
</CustomField>