force-app/main/default/objects/Unit_Details__c/fields/Diesel_Litres_on_hand__c.field-meta.xml
<CustomField>
    <fullName>Diesel_Litres_on_hand__c</fullName>
    <label>Diesel (Litres on hand)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>