force-app/main/default/objects/Unit_Details__c/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DR#</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>Unit Details</relationshipLabel>
    <relationshipName>Unit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>