force-app/main/default/objects/Unit_Details__c/fields/Engine_Temperature_2__c.field-meta.xml
<CustomField>
    <fullName>Engine_Temperature_2__c</fullName>
    <label>Engine Temperature (2)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>