force-app/main/default/objects/Unit_Details__c/fields/Generator_1__c.field-meta.xml
<CustomField>
    <fullName>Generator_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Generator (1)</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Unit Details</relationshipLabel>
    <relationshipName>Unit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>