force-app/main/default/objects/Unit_Details__c/fields/Generator_2__c.field-meta.xml
<CustomField>
    <fullName>Generator_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Generator (2)</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Unit Details (Generator (2))</relationshipLabel>
    <relationshipName>Unit_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>