force-app/main/default/objects/Unit_Details__c/fields/Potable_Water_Litres_on_hand__c.field-meta.xml
<CustomField>
    <fullName>Potable_Water_Litres_on_hand__c</fullName>
    <label>Potable Water (Litres on hand)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>