force-app/main/default/objects/Unit_Details__c/fields/Rubbish_Bins_Full__c.field-meta.xml
<CustomField>
    <fullName>Rubbish_Bins_Full__c</fullName>
    <label>Rubbish Bins (% Full)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>