force-app/main/default/objects/Unit_Details__c/fields/Septic_Litres_in_Tank__c.field-meta.xml
<CustomField>
    <fullName>Septic_Litres_in_Tank__c</fullName>
    <label>Septic (Litres in Tank)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>