force-app/main/default/objects/Unit_Details__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Deliveries Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>